test/files/neg/stmt-expr-discard.scala
// scalac: -Xfatal-warnings
class A {
  def f = 1
    + 2
    - 4
}
